# bbSCITE

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Readme.md  requirements.txt  tool.py
.devcontainer/: Dockerfile  devcontainer.json
cpu_scoring_benchmark/: CMakeLists.txt  CPUTreeScorer.hpp  TreeScorer.hpp  main.cpp
docs/paper/: acronyms.tex  bbscite.tex  literature.bib  packages.tex
docs/paper/figures/: ancestor_matrix.tex  design.tex  mutation_tree.tex  packages.tex  prune_reattach.tex
docs/paper/floats-earlier-versions/: alg02-move.tex  fig04-move.tex
docs/paper/sections/: 01-introduction.tex  02-background.tex  03-approach.tex  04-evaluation.tex  05-analysis.tex  07-conclusion.tex
docs/proposal/: cfg.tex  cukproposal.cls  planned_work.tex  title.tex
docs/thesis/: .gitignore  abstract.tex  body.tex  commands.tex  literature.bib  packages.tex  thesis.tex  upb_cs_thesis.cls
docs/thesis/chapters/: background.tex  conclusion.tex  design.tex  evaluation.tex  findings.tex  introduction.tex  optimizations.tex  performance.tex  testing.tex
docs/thesis/chapters/background/: formalization.tex
docs/thesis/chapters/conclusion/: open_directions.tex
docs/thesis/chapters/design/: encoding.tex  io.tex  misc.tex  overview.tex  proposal.tex  scoring.tex
docs/thesis/chapters/evaluation/: hardware.tex  loops.tex  quality.tex  runtime.tex
docs/thesis/chapters/findings/: ancestor_matrix.tex  tree_scoring.tex
docs/thesis/chapters/introduction/: background.tex  goal.tex  motivation.tex  results.tex  scenario.tex
docs/thesis/chapters/optimizations/: formalization.tex  original.tex
docs/thesis/chapters/performance/: hardware.tex  loops.tex  quality.tex  runtime.tex
docs/thesis/chapters/testing/: performance.tex  quality.tex
docs/thesis/figures/: example_tree.xcf
docs/thesis/pretext/: titlepage.tex
experiments/: initial_benchmark.sh  quality_benchmark.sh
exposee/: thesis.tex
initial_talk/: abstract.md  script.md
proposal/: .gitignore  README.md  background.tex  cfg.tex  challenges.tex  cukproposal.cls  introduction.tex  motivation.tex  planned_work.tex  proposal.tex  references.bib  sigs.tex
sample_data/: .gitignore  sanity.csv
scripts/: generate_input.py  performance_benchmark.sh  quality_benchmark.sh  report.sh  synthesis.sh
scripts/performance_benchmark/: ffscite.sh  generate_inputs.sh  scite.sh  variables.sh
scripts/quality_benchmark/: ffscite.sh  generate_inputs.sh  scite.sh  variables.sh
src/: AncestorMatrix.hpp  Application.hpp  CMakeLists.txt  ChainState.hpp  ChainStepParameters.hpp  ChangeProposer.hpp  MCMCKernel.hpp  MoveType.hpp  MutationTree.hpp  Parameters.hpp  ParentVector.hpp  RawMoveDistribution.hpp  StackVector.hpp  StateScorer.hpp  StaticMatrix.hpp  TreeScorer.hpp  main.cpp
test/: AncestorMatrix.cpp  Application.cpp  CMakeLists.txt  ChangeProposer.cpp  MCMCKernel.cpp  MutationTree.cpp  ParentVector.cpp  StackVector.cpp  StateScorer.cpp  StaticMatrix.cpp  TreeScorer.cpp  test.cpp
thesis/: .gitignore  commands.tex  literature.bib  packages.tex  thesis.tex
thesis/chapters/: introduction.tex
verification/: __init__.py  __main__.py  lib.py
